--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
@@ -11,10 +9,9 @@
 }
 
 @layer base {
-
-
   .font-sans {
-    font-family: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    font-family: var(--font-geist-sans), ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+      "Segoe UI Symbol", "Noto Color Emoji";
   }
 
   :root {
@@ -191,81 +188,61 @@ h6 {
 }
 
 h1 {
-  font-size: 2.25rem;
-  /* 36px */
-  line-height: 2.5rem;
-  /* 40px */
+  font-size: 2.25rem; /* 36px */
+  line-height: 2.5rem; /* 40px */
   font-weight: 700;
 }
 
 h2 {
-  font-size: 1.875rem;
-  /* 30px */
-  line-height: 2.25rem;
-  /* 36px */
+  font-size: 1.875rem; /* 30px */
+  line-height: 2.25rem; /* 36px */
   font-weight: 600;
 }
 
 h3 {
-  font-size: 1.5rem;
-  /* 24px */
-  line-height: 2rem;
-  /* 32px */
+  font-size: 1.5rem; /* 24px */
+  line-height: 2rem; /* 32px */
   font-weight: 600;
 }
 
 h4 {
-  font-size: 1.25rem;
-  /* 20px */
-  line-height: 1.75rem;
-  /* 28px */
+  font-size: 1.25rem; /* 20px */
+  line-height: 1.75rem; /* 28px */
   font-weight: 600;
 }
 
 h5 {
-  font-size: 1.125rem;
-  /* 18px */
-  line-height: 1.75rem;
-  /* 28px */
+  font-size: 1.125rem; /* 18px */
+  line-height: 1.75rem; /* 28px */
   font-weight: 500;
 }
 
 h6 {
-  font-size: 1rem;
-  /* 16px */
-  line-height: 1.5rem;
-  /* 24px */
+  font-size: 1rem; /* 16px */
+  line-height: 1.5rem; /* 24px */
   font-weight: 500;
 }
 
 .body-text {
-  font-size: 1rem;
-  /* 16px */
-  line-height: 1.5rem;
-  /* 24px */
+  font-size: 1rem; /* 16px */
+  line-height: 1.5rem; /* 24px */
 }
 
 .body-sm {
-  font-size: 0.875rem;
-  /* 14px */
-  line-height: 1.25rem;
-  /* 20px */
+  font-size: 0.875rem; /* 14px */
+  line-height: 1.25rem; /* 20px */
 }
 
 .caption {
-  font-size: 0.875rem;
-  /* 14px */
-  line-height: 1.25rem;
-  /* 20px */
+  font-size: 0.875rem; /* 14px */
+  line-height: 1.25rem; /* 20px */
   color: hsl(var(--muted-foreground));
   font-weight: 500;
 }
 
 .caption-sm {
-  font-size: 0.75rem;
-  /* 12px */
-  line-height: 1rem;
-  /* 16px */
+  font-size: 0.75rem; /* 12px */
+  line-height: 1rem; /* 16px */
   color: hsl(var(--muted-foreground));
   font-weight: 500;
 }
@@ -621,7 +598,6 @@ body {
 .font-weight-sample {
   @apply border rounded-md p-3;
 }
-
 .chat-bg {
   background-color: var(--background);
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100'%3E%3Cfilter id='n'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.8' numOctaves='4' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23n)' opacity='0.03'/%3E%3C/svg%3E");
