--- a/app/globals.css
+++ b/app/globals.css
@@ -137,6 +137,9 @@
 
     --accent-muted-2: var(--rust-background-200);
     --accent-muted: var(--rust-gray-100-value);
+
+    --accents-1: #fafafa;
+    --accents-2: #eaeaea;
   }
 
   .dark {
@@ -247,6 +250,9 @@
 
     --accent-muted-2: #0a0a0a;
     --accent-muted: var(--rust-gray-100-value);
+
+    --accents-1: #111;
+    --accents-2: #333;
   }
 }
 
@@ -795,4 +801,27 @@ body, html {
 
 .border-shadow {
   box-shadow: 0 0 0 1px var(--themed-border, transparent);
+}
+
+
+.rust-skeleton {
+  background-image: linear-gradient(
+    270deg,
+    var(--accents-1),
+    var(--accents-2),
+    var(--accents-2),
+    var(--accents-1)
+  );
+  background-size: 400% 100%;
+  animation: rust_skeleton_loading 8s ease-in-out infinite;
+}
+
+@keyframes rust_skeleton_loading {
+  0% {
+    background-position: 200% 0;
+  }
+
+  100% {
+    background-position: -200% 0;
+  }
 }
